# JetLee

./: .gitignore  CMakeLists.txt  README.md
data/: attack.xcf  graphics.json  heroes.json  igdc_icon.xcf  locations.json  map-level-2.xcf
myogl/: README.md
myogl/src/: animation.cpp  animation.h  base_object.cpp  base_object.h  camera.cpp  camera.h  config.h  config_file.cpp  config_file.h  entity.cpp  entity.h  events.cpp  events.h  frame_buffer.cpp  frame_buffer.h  light.h  log.cpp  log.h  material.cpp  material.h  matrix_types.cpp  matrix_types.h  myogl.cpp  myogl.h  render.cpp  render.h  shaders.h  singleton.h  sprites.cpp  sprites.h  texture.cpp  texture.h  tileset.cpp  tileset.h  types.h  vbo.cpp  vbo.h  vector_types.h
myogl/src/3rd/: picopng.cpp
myogl/src/fileformats/: bmpimage.cpp  bmpimage.h
myogl/src/ui/: base_ui_class.h  bitmap_font.cpp  bitmap_font.h  panel.h  text_box.cpp  text_box.h
src/: .gitignore  JetLee.cbp  ai.cpp  ai.h  camera2d.h  game.h  gamesound.h  graphics.cpp  graphics.h  hero.cpp  hero.h  locations.cpp  locations.h  main.cpp  read.me  readme.ru.txt  sound.h
src/data/: heroes sprites.xcf  jlee.xcf  map-level-1.xcf  map-level-3.xcf  run.xcf  sprites.xcf
src/jsmn/example/: heroes.json  jsondump
src/sound/: sound.cpp  sound.h
